# fieldworks-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/waterworks/: schema_seed.cypher
examples/waterworks/topology_builder/: water-treatment-municipal.yaml
fieldworks/: __init__.py  cli.py
fieldworks/adapters/: __init__.py  conformance.py
fieldworks/agents/: __init__.py  caching.py  deadband.py  specialist.py
fieldworks/aggregator/: __init__.py  config.py  resolve.py
fieldworks/memory/: __init__.py  analytical.py  client.py  graph.py  schema.cypher  specialist.py
fieldworks/topology/: __init__.py  loader.py  schema.py  seeder.py  validator.py
fieldworks/topology_builder/: __init__.py  discovery.py  inference.py
fieldworks/trust/: __init__.py  audit.py  events.py  intercept.py  modes.py
tests/: conftest.py  test_aggregator.py  test_aggregator_resolve.py  test_attribute_data_type.py  test_caching.py  test_cli.py  test_conformance.py  test_deadband.py  test_memory_analytical.py  test_memory_client.py  test_memory_graph.py  test_memory_specialist.py  test_seeder.py  test_severity_lookup.py  test_specialist.py  test_topology_builder_discovery.py  test_topology_builder_inference.py  test_topology_loader.py  test_topology_validator.py  test_trust_audit.py  test_trust_events.py  test_trust_intercept.py  test_trust_modes.py
tests/fixtures/: fake_adapter.py  legacy_wtp_topics.py  wtp_aggregator.json  wtp_topology.yaml
