[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldworks-core"
version = "0.1.0"
description = "Fieldworks industrial AI framework — core components"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
memory = [
    "ladybug",
    "duckdb",
    "influxdb-client",
    "pytz",
]
adapters = [
    "mcp>=1.0",
]

[project.scripts]
fieldworks = "fieldworks.cli:main"

[tool.setuptools.package-data]
"fieldworks.memory" = ["schema.cypher"]

[tool.black]
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
