[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldworks-core"
version = "1.0.4"
description = "Fieldworks industrial AI framework — core components"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sean Slavin", email = "slavin.sean@gmail.com"},
]
keywords = ["industrial", "ai", "agents", "mcp", "scada", "iot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/fieldworks-build/fieldworks-core"
Repository = "https://github.com/fieldworks-build/fieldworks-core"
Issues = "https://github.com/fieldworks-build/fieldworks-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
memory = [
    "ladybug",
    "duckdb",
    "influxdb-client",
    "pytz",
]
adapters = [
    "mcp>=1.0",
]
trust = [
    "cryptography>=41.0",
]

[project.scripts]
fieldworks = "fieldworks.cli:main"

[tool.setuptools.package-data]
"fieldworks.memory" = ["schema.cypher"]

[tool.black]
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
